Upgrade to Vertx 4.5.11